infrastructure/kubernetes/tenants/stalwart/stalwart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stalwart-ingress
  namespace: stalwart
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: mail.smallworlds.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stalwart-mail
                port:
                  name: jmap
  tls:
    - hosts:
        - mail.smallworlds.network
      secretName: stalwart-tls
